--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1,4 +1,7 @@
 /*VARIABLES*/
+*, ::after, ::before {
+  box-sizing: unset; }
+
 body {
   background-color: #0f1015;
   color: white;
@@ -14,6 +17,7 @@ body {
 /*NAV BAR*/
 header {
   background-color: #1a1919;
+  width: 100%;
   padding-top: 0.5rem;
   position: -webkit-sticky;
   position: sticky;
@@ -40,9 +44,24 @@ header {
         padding: 10px;
         font-weight: 600; }
       header nav #navegador div :hover {
-        background-color: #242424;
+        background-color: #302f2f;
         color: white;
-        text-decoration: none; }
+        text-decoration: none;
+        transition: .4s; }
+  header label {
+    display: none;
+    width: 30px;
+    height: 30px;
+    padding: 10px; }
+    header label :hover {
+      cursor: pointer;
+      background: rgba(0, 0, 0, 0.3); }
+    header label img {
+      width: 100%;
+      height: 100%; }
+
+#btn-menu {
+  display: none; }
 
 main {
   text-align: center;
@@ -50,6 +69,12 @@ main {
 
 .fondo__index {
   background-image: url(../Imagenes/wallpaperbetter.com_1920x1080.jpg);
+  padding: 1%;
+  background-repeat: space;
+  background-attachment: fixed; }
+
+.fondo__gimnasio {
+  background-image: url(../Imagenes/FondoSeccionGimnasio.jpg);
   padding: 1%;
   background-repeat: space;
   background-attachment: fixed; }
@@ -62,6 +87,12 @@ main {
 
 .fondo__planes {
   background-image: url(../Imagenes/Fondos.jpg);
+  padding: 1%;
+  background-repeat: space;
+  background-attachment: fixed; }
+
+.fondo__contacto {
+  background-image: url(../Imagenes/fondoConsultas.jpg);
   padding: 1%;
   background-repeat: space;
   background-attachment: fixed; }
@@ -91,7 +122,8 @@ main {
     .intro .intro__inscribirme :hover {
       background-color: #252525;
       color: #d3e82b;
-      border: 1px solid #d3e82b; }
+      border: 1px solid #d3e82b;
+      transition: .4s; }
 
 /*STAFF*/
 .tablaStaff {
@@ -124,8 +156,68 @@ main {
     font-size: 15px; }
 
 /*GIMNASIO*/
-.videoyoutube {
-  margin: 20px; }
+.fondo__gimnasio {
+  padding-top: 1%; }
+
+main .container-fluid {
+  padding-right: 0px;
+  padding-left: 0px; }
+
+main .sedeDireccion {
+  display: flex;
+  align-items: center;
+  background-color: #252525;
+  width: 100%;
+  height: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 80px;
+  margin-bottom: 25px; }
+  main .sedeDireccion .mapa {
+    height: 100%;
+    width: 40vw;
+    padding-left: 10vw;
+    margin-left: 0px; }
+  main .sedeDireccion .infoMapa {
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 10px; }
+    main .sedeDireccion .infoMapa h2 {
+      font-size: 19px;
+      color: #d3e82b;
+      font-weight: bold;
+      padding-bottom: 10px; }
+    main .sedeDireccion .infoMapa p {
+      line-height: 10px;
+      margin-top: 15px;
+      font-weight: 400; }
+
+main .videoyoutube {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  background-color: #252525;
+  width: 100%;
+  height: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 80px;
+  margin-bottom: 25px; }
+  main .videoyoutube .videoGim {
+    width: 40vw;
+    height: 100%;
+    padding-right: 10vw; }
+  main .videoyoutube .infoVideo {
+    text-align: right;
+    padding-right: 50px;
+    margin-top: 0px; }
+    main .videoyoutube .infoVideo h2 {
+      font-size: 19px;
+      color: #d3e82b;
+      font-weight: bold;
+      padding-bottom: 10px; }
+    main .videoyoutube .infoVideo p {
+      line-height: 10px;
+      margin-top: 15px;
+      font-weight: 400; }
 
 /*PLANES*/
 .contenedorTabla {
@@ -154,9 +246,11 @@ main {
       display: block; }
     .contenedorTabla div div .boton-buy:hover {
       background-color: #b9cc2c;
-      color: #d3e82b; }
+      color: #d3e82b;
+      transition: .4s; }
     .contenedorTabla div div .boton-buy:hover a {
-      color: white; }
+      color: white;
+      transition: .4s; }
   .contenedorTabla .contenedorTabla__planes__box1 {
     grid-area: titulo;
     background-color: #252525;
@@ -191,6 +285,33 @@ main {
   color: #d3e82b; }
 
 /*CONTACTO*/
+.fondo__contacto {
+  padding: 1%;
+  padding-right: 10%;
+  padding-left: 10%; }
+
+.formulario {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #252525;
+  padding: 5vh;
+  margin-bottom: 5vh; }
+  .formulario form {
+    width: 60vw; }
+    .formulario form .row {
+      margin-bottom: 1rem; }
+    .formulario form p {
+      margin-bottom: 5vh;
+      font-size: 19px;
+      font-weight: 400; }
+    .formulario form .btn-primary {
+      background-color: #d3e82b;
+      border: none;
+      font-weight: bolder; }
+      .formulario form .btn-primary :hover {
+        background-color: #b3c526; }
+
 /*FOOTER*/
 footer {
   background-color: #1a1919;
@@ -202,7 +323,6 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: baseline;
   padding: 10px; }
 
 .footer__menu {
@@ -218,8 +338,19 @@ footer {
 .footer__link :hover {
   color: #757474; }
 
+.fa {
+  display: none;
+  padding: 15px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  border-radius: 50%; }
+  .fa :hover {
+    opacity: 0.7; }
+
 .copyright {
-  color: grey; }
+  color: grey;
+  margin-top: 15px; }
 
 ul {
   list-style-type: none;
@@ -258,7 +389,45 @@ h5 {
   margin-top: 0%;
   margin-block-end: 1.67em; }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+  /*INDEX*/
+  .intro {
+    margin-left: 0%;
+    text-align: center;
+    padding-left: 2vh;
+    padding-right: 2vh; }
+    .intro .intro__cambio {
+      font-size: 25px; }
+    .intro .intro__parrafo {
+      font-size: 15px;
+      font-weight: 500; }
+    .intro .intro__inscribirme {
+      margin-top: 60px; }
+      .intro .intro__inscribirme a {
+        background-color: #d3e82b;
+        color: black;
+        padding: 12px 30px 12px 30px;
+        border-radius: 3px; }
+      .intro .intro__inscribirme :hover {
+        background-color: #252525;
+        color: #d3e82b;
+        border: 1px solid #d3e82b;
+        transition: .4s; }
+  /*NAV*/
+  header label {
+    display: block;
+    margin-left: 2%; }
+  header nav {
+    position: absolute;
+    width: 100%;
+    margin-left: -100%;
+    transition: all 0.5s; }
+    header nav .logo {
+      display: none; }
+    header nav #navegador {
+      flex-direction: column; }
+  header #btn-menu:checked ~ nav {
+    margin: 0; }
   /*PLANES*/
   .contenedorTabla .contenedorTabla__planes {
     grid-template-rows: auto;
@@ -274,4 +443,117 @@ h5 {
   .contenedorTabla .contenedorTabla__planes div.boton-buy {
     border-radius: 0 0 4px 4px; }
   .contenedorTabla .contenedorTabla__planes li {
-    padding-bottom: 15px; } }
+    padding-bottom: 15px; }
+  /*STAFF*/
+  .fondo__staff p {
+    font-size: 15px;
+    padding-left: 2vh;
+    padding-right: 2vh; }
+  .tablaStaff .tablaStaff__item {
+    height: 25vh; }
+    .tablaStaff .tablaStaff__item .tablaStaff__item__skill {
+      margin-left: 10%;
+      margin-top: 0;
+      padding-top: 10vh;
+      font-size: 12px; }
+    .tablaStaff .tablaStaff__item li {
+      display: none; }
+  /*GIMNASIO*/
+  .fondo__gimnasio {
+    padding: 0%;
+    padding-top: 2%;
+    padding-bottom: 20px; }
+  main .container-fluid {
+    padding-right: 0px;
+    padding-left: 0px; }
+  main .sedeDireccion {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+    background-color: #252525;
+    width: 100%;
+    height: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 80px;
+    margin-bottom: 40px;
+    padding-top: 30px; }
+    main .sedeDireccion .mapa {
+      height: 100%;
+      width: 100vw;
+      margin-top: 10px;
+      padding-left: 0px;
+      margin-left: 0px; }
+    main .sedeDireccion .infoMapa {
+      text-align: center;
+      margin-left: 0;
+      margin-top: 0;
+      text-transform: uppercase; }
+      main .sedeDireccion .infoMapa h2 {
+        margin-top: 0px;
+        font-size: 18px; }
+      main .sedeDireccion .infoMapa p {
+        font-size: 14px;
+        line-height: 8px; }
+  main .videoyoutube {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+    background-color: #252525;
+    width: 100%;
+    height: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 80px;
+    margin-bottom: 40px;
+    padding-top: 30px; }
+    main .videoyoutube .videoGim {
+      width: 100vw;
+      height: 100%;
+      padding-right: 0px; }
+    main .videoyoutube .infoVideo {
+      text-align: center;
+      padding-right: 0px;
+      margin-top: 0px;
+      text-transform: uppercase; }
+      main .videoyoutube .infoVideo h2 {
+        font-size: 18px;
+        margin-bottom: 3vw; }
+      main .videoyoutube .infoVideo p {
+        display: none;
+        font-size: 14px;
+        line-height: 8px; }
+  /*CONTACTO*/
+  .fondo__contacto {
+    padding-right: 0%;
+    padding: 0%;
+    padding-top: 1%;
+    padding-bottom: 2%; }
+  .formulario form {
+    width: 90%; }
+  /*FOOTER*/
+  footer {
+    height: auto;
+    align-items: baseline;
+    padding: 10px; }
+  .footer__menu {
+    padding: 1rem; }
+  .hidden {
+    display: none; }
+  .footer__link {
+    display: flex;
+    flex-direction: column; }
+  .footer__link a {
+    font-weight: 500; }
+  .footer__link :hover {
+    color: #757474; }
+  .fa {
+    display: inline;
+    padding: 15px;
+    font-size: 20px;
+    width: 20px;
+    text-align: center;
+    border-radius: 50%; }
+    .fa :hover {
+      opacity: 0.7; }
+  .copyright {
+    text-align: center;
+    font-size: 10px; } }
