--- a/SCSS/Style.scss
+++ b/SCSS/Style.scss
@@ -8,6 +8,9 @@ $background-items: #252525;
     background-repeat: space;
     background-attachment: fixed;
 }
+*, ::after, ::before {
+    box-sizing: unset;
+    }
 
 
 body{
@@ -27,6 +30,7 @@ body{
 /*NAV BAR*/
 header{
     background-color: #1a1919;
+    width: 100%;
     padding-top: 0.5rem;
     position: -webkit-sticky;
     position: sticky;
@@ -55,12 +59,30 @@ header{
                     padding: 10px;
                     font-weight: 600;}
                     :hover{
-                        background-color: #242424;
+                        background-color: #302f2f;
                         color: white;
-                        text-decoration: none;}      
+                        text-decoration: none;
+                        transition: .4s;}      
             }
         }
     }
+    label{
+        display: none;
+        width: 30px;
+        height: 30px;
+        padding: 10px;
+        :hover{
+            cursor: pointer;
+            background: rgba(0, 0, 0, 0.3);
+        }
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+#btn-menu {
+    display: none;
 }
 
 main{
@@ -69,12 +91,19 @@ main{
 .fondo__index{
     background-image: url(../Imagenes/wallpaperbetter.com_1920x1080.jpg);
     @include img-fondo;}
+.fondo__gimnasio{
+    background-image: url(../Imagenes/FondoSeccionGimnasio.jpg);
+    @include img-fondo;}  
 .fondo__staff{
     background-image: url(../Imagenes/Fondo-gimnasio.jpg);
     @include img-fondo;}
 .fondo__planes{
     background-image: url(../Imagenes/Fondos.jpg);
+    @include img-fondo;}
+.fondo__contacto{
+    background-image: url(../Imagenes/fondoConsultas.jpg);
     @include img-fondo;}  
+      
 
 /*INDEX*/
 .intro{
@@ -101,7 +130,8 @@ main{
             :hover{
                 background-color: $background-items;
                 color: $color-mediafit;
-                border: 1px solid  $color-mediafit;}
+                border: 1px solid  $color-mediafit;
+                transition: .4s;}
         }
 }
 
@@ -138,10 +168,80 @@ main{
 }
 
 /*GIMNASIO*/
+.fondo__gimnasio{
+    padding-top: 1%;}
 
-.videoyoutube{
-    margin: 20px;
-}
+main{
+    .container-fluid{
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+    .sedeDireccion{
+        display: flex;
+        align-items: center;
+        background-color: $background-items;
+        width: 100%;
+        height: 250px;
+        box-shadow: $sombra-box;
+        margin-top: 80px;
+        margin-bottom: 25px;
+        .mapa{
+            height: 100%;
+            width: 40vw;
+            padding-left: 10vw;            
+            margin-left: 0px;
+        }
+        .infoMapa{
+            text-align: left;
+            margin-left: 50px;
+            margin-top: 10px;
+            h2{
+                font-size: 19px;
+                color: $color-mediafit;
+                font-weight: bold;
+                padding-bottom: 10px;                                            
+            }
+            p{
+                line-height: 10px;
+                margin-top: 15px;
+                font-weight: 400;  
+            }         
+        }    
+    }
+    .videoyoutube{
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        background-color: $background-items;
+        width: 100%;
+        height: 250px;
+        box-shadow: $sombra-box;
+        margin-top: 80px;
+        margin-bottom: 25px;
+        .videoGim{
+            width: 40vw;
+            height: 100%;
+            padding-right: 10vw;
+        }
+        .infoVideo{
+            text-align: right;
+            padding-right: 50px;
+            margin-top: 0px;
+            h2{
+                font-size: 19px;
+                color: $color-mediafit;               
+                font-weight: bold;
+                padding-bottom: 10px;                     
+            }
+            p{
+                line-height: 10px;
+                margin-top: 15px;
+                font-weight: 400;            
+            }   
+            
+        }
+    }
+}    
 
 /*PLANES*/
 
@@ -179,9 +279,11 @@ main{
                         display: block}
                     &:hover{
                         background-color: #b9cc2c;
-                        color: $color-mediafit;}
+                        color: $color-mediafit;
+                        transition: .4s;}
                         &:hover a{
                             color: white;
+                            transition: .4s;
                         }
                                            
                 }  
@@ -219,15 +321,44 @@ main{
         .contenedorTabla__planes__box5{
             grid-area: contacto;
             background-color: $background-items;}
-            }                         
+}                         
             .colorpro{
                 color: $color-mediafit;
             }        
-        
+    
 /*CONTACTO*/
-
-
-
+.fondo__contacto{
+    padding: 1%;
+    padding-right: 10%;
+    padding-left: 10%;
+}
+.formulario{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: $background-items;
+    padding: 5vh;
+    margin-bottom: 5vh;
+    form{
+        width: 60vw;
+        .row{
+            margin-bottom: 1rem;
+        }
+        p{
+            margin-bottom: 5vh;
+            font-size: 19px;
+            font-weight: 400;
+        }        
+        .btn-primary{
+            background-color: $color-mediafit;
+            border: none;
+            font-weight: bolder;
+            :hover{
+                background-color: #b3c526;
+            }
+        }
+    }
+}
 /*FOOTER*/
 footer{
     background-color: #1a1919;
@@ -239,8 +370,8 @@ footer{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: baseline;
-    padding: 10px;}
+    padding: 10px;
+}
     .footer__menu{
         padding: 1rem;
     }
@@ -254,8 +385,21 @@ footer{
             :hover{
                 color: #757474;}
     }
+    .fa {
+        display: none;
+        padding: 15px;
+        font-size: 30px;
+        width: 30px;
+        text-align: center;
+        border-radius: 50%;
+        :hover {
+            opacity: 0.7;
+        }
+      }
+    
     .copyright{
         color: grey;
+        margin-top: 15px
     }
 
 ul{
@@ -302,35 +446,232 @@ h5{
 
 
 
-@media (max-width: 600px) {
-    
-    /*PLANES*/
-    .contenedorTabla{
-        .contenedorTabla__planes{
-            grid-template-rows: auto;
-            grid-row-gap: 30px;
-        grid-template-areas: 
-        "titulo titulo titulo"
-        "plan1 plan1 plan1"
-        "plan3 plan3 plan3"
-        "plan2 plan2 plan2"
-        "contacto contacto contacto"
+@media (max-width: 768px){
+
+    /*INDEX*/
+.intro{
+    margin-left: 0%;
+    text-align: center;
+    padding-left: 2vh;
+    padding-right: 2vh;
+    .intro__cambio{
+        font-size: 25px;}
+        .intro__parrafo{
+            font-size: 15px;
+            font-weight: 500;}   
+    .intro__inscribirme{
+        margin-top: 60px;
+        a{
+            background-color: $color-mediafit;
+            color: black;
+            padding: 12px 30px 12px 30px;
+            border-radius: 3px;}
+            :hover{
+                background-color: $background-items;
+                color: $color-mediafit;
+                border: 1px solid  $color-mediafit;
+                transition: .4s;}
         }
-            .contenedorTabla__planes__box2{
-                grid-row-gap: 3px;
-                border-radius: 5px;
+}
+
+    /*NAV*/
+header{
+    label {
+    display: block;
+    margin-left: 2%;}
+    nav{
+        position: absolute;
+        width: 100%;
+        margin-left: -100%;
+        transition: all 0.5s;
+        .logo{
+            display: none;
+        }
+        #navegador{
+            flex-direction: column;}
+        }
+        #btn-menu:checked ~nav {
+            margin: 0;
+        }
+    }
+    /*PLANES*/
+.contenedorTabla{
+    .contenedorTabla__planes{
+        grid-template-rows: auto;
+        grid-row-gap: 30px;
+    grid-template-areas: 
+    "titulo titulo titulo"
+    "plan1 plan1 plan1"
+    "plan3 plan3 plan3"
+    "plan2 plan2 plan2"
+    "contacto contacto contacto"
+    }
+        .contenedorTabla__planes__box2{
+            grid-row-gap: 3px;
+            border-radius: 5px;
+        }
+        .contenedorTabla__planes__box3{
+            grid-row-gap: 3px;
+        }
+        .contenedorTabla__planes__box4{
+            grid-row-gap: 3px;
+        }
+        .contenedorTabla__planes div.boton-buy{
+        border-radius: 0 0 4px 4px;
+        }
+        .contenedorTabla__planes li {
+            padding-bottom: 15px;
+        }
+}
+
+    /*STAFF*/
+    
+.fondo__staff{
+    p{
+        font-size: 15px;
+        padding-left: 2vh;
+        padding-right: 2vh;
+    }
+}
+.tablaStaff{
+.tablaStaff__item{
+    height: 25vh;
+    .tablaStaff__item__skill{
+        margin-left: 10%;
+        margin-top: 0;
+        padding-top: 10vh;
+        font-size: 12px;}
+        li{
+            display: none;
+        }
+    }
+}
+
+
+/*GIMNASIO*/
+.fondo__gimnasio{
+    padding: 0%;
+    padding-top: 2%;
+    padding-bottom: 20px;
+}
+main{
+    .container-fluid{
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+    .sedeDireccion{
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
+        background-color: $background-items;
+        width: 100%;
+        height: 250px;
+        box-shadow: $sombra-box;
+        margin-top: 80px;
+        margin-bottom: 40px;
+        padding-top: 30px;
+        .mapa{
+            height: 100%;
+            width: 100vw;
+            margin-top: 10px;
+            padding-left: 0px;            
+            margin-left: 0px;
+        }
+        .infoMapa{
+            text-align: center;
+            margin-left: 0;
+            margin-top: 0;
+            text-transform: uppercase;     
+            h2{
+                margin-top: 0px;
+                font-size: 18px;
             }
-            .contenedorTabla__planes__box3{
-                grid-row-gap: 3px;
+            p{
+                font-size: 14px;
+                line-height: 8px;
+            }         
+        }        
+    }    
+    .videoyoutube{
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
+        background-color: #252525;
+        width: 100%;
+        height: 250px;
+        box-shadow: $sombra-box;
+        margin-top: 80px;
+        margin-bottom: 40px;
+        padding-top: 30px;
+        .videoGim{
+            width: 100vw;
+            height: 100%;
+            padding-right: 0px;
+        }
+        .infoVideo{
+            text-align: center;
+            padding-right: 0px;
+            margin-top: 0px;
+            text-transform: uppercase;  
+            h2{
+                font-size: 18px;
+                margin-bottom: 3vw;                                 
             }
-            .contenedorTabla__planes__box4{
-                grid-row-gap: 3px;
-            }
-            .contenedorTabla__planes div.boton-buy{
-            border-radius: 0 0 4px 4px;
-            }
-            .contenedorTabla__planes li {
-                padding-bottom: 15px;
-            }
+            p{
+                display: none;
+                font-size: 14px;
+                line-height: 8px;
+            }   
+            
+        }
+    }
+}
+/*CONTACTO*/
+.fondo__contacto{
+    padding-right: 0%;
+    padding: 0%;
+    padding-top: 1%;
+    padding-bottom: 2%;
+}
+.formulario{
+    form{
+        width: 90%;
+    }
+}
+    /*FOOTER*/
+footer{
+    height: auto;
+    align-items: baseline;
+    padding: 10px;}
+    .footer__menu{
+        padding: 1rem;}
+        .hidden{
+            display: none;
+        }    
+    .footer__link{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer__link{
+        a{
+            font-weight: 500;}
+            :hover{
+                color: #757474;}
+    }
+    .fa {
+        display: inline;
+        padding: 15px;
+        font-size: 20px;
+        width: 20px;
+        text-align: center;
+        border-radius: 50%;
+        :hover {
+            opacity: 0.7;
+        }
+      }
+    
+    .copyright{
+        text-align: center;
+        font-size: 10px;
     }
 }
